# build-scripts

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: install-test-deps.linux.sh  install-test-deps.osx.sh  install-test-deps.windows.sh
cmake/: CMakeCompatibility.cmake  CopyDlls.cmake  FindFFTW3.cmake  FindFLAC.cmake  FindFdkAac.cmake  FindLAME.cmake  FindLIBPORTAUDIO.cmake  FindLIBSNDFILE.cmake  FindMpg123.cmake  FindOgg.cmake  FindOpus.cmake  FindPortAudio.cmake  FindSafeDownload.cmake  FindSndFile.cmake  FindSndfile.cmake  FindVorbis.cmake  Findlibsndfile.cmake  GetSidecarDllDirectory.cmake  GetWindowsProgramFilesDir.cmake  GitDescribe.cmake  SetupSidecarDll.cmake  SetupVersion.cmake  TargetPlatform.cmake  UsePython.cmake  get_lame_version.c  use_python_compile.py
test/: CMakeLists.txt
test/TestDll2Lib/: CMakeLists.txt
test/TestFindFFTW3/: CMakeLists.txt  main.c
test/TestFindFdkAac/: CMakeLists.txt  main.c
test/TestFindLAME/: CMakeLists.txt  main.c
test/TestFindMpg123/: CMakeLists.txt  main.c
test/TestFindPortAudio/: CMakeLists.txt  main.c
test/TestFindSndfile/: CMakeLists.txt  main.c
test/TestSafeDownload/: CMakeLists.txt
